results/scraper/launchpad-without-comments/1925449
Failure building with clang-10 and libssh 

On Fedora 32, configuring with --enable-libssh and building with clang:

qemu 5.2.94

  Compilation
    host CPU                     : x86_64
    host endianness              : little
    C compiler                   : clang-10
    Host C compiler              : clang-10

  Dependencies
    libssh support               : YES

triggers:

FAILED: libblock.fa.p/block_ssh.c.o 
block/ssh.c:349:13: error: 'ssh_is_server_known' is deprecated [-Werror,-Wdeprecated-declarations]
    state = ssh_is_server_known(s->session);
            ^
/usr/include/libssh/libssh.h:546:1: note: 'ssh_is_server_known' has been explicitly marked deprecated here
SSH_DEPRECATED LIBSSH_API int ssh_is_server_known(ssh_session session);
^
/usr/include/libssh/libssh.h:84:40: note: expanded from macro 'SSH_DEPRECATED'
#define SSH_DEPRECATED __attribute__ ((deprecated))
                                       ^
block/ssh.c:444:9: error: 'ssh_get_publickey' is deprecated [-Werror,-Wdeprecated-declarations]
    r = ssh_get_publickey(s->session, &pubkey);
        ^
/usr/include/libssh/libssh.h:543:1: note: 'ssh_get_publickey' has been explicitly marked deprecated here
SSH_DEPRECATED LIBSSH_API int ssh_get_publickey(ssh_session session, ssh_key *key);
^
/usr/include/libssh/libssh.h:84:40: note: expanded from macro 'SSH_DEPRECATED'
#define SSH_DEPRECATED __attribute__ ((deprecated))
                                       ^
2 errors generated.